# pipedream

./: .gitignore  Cargo.toml  README.md  campaign-state.yaml  campaign-world-state.yml  campaign-world.yml  cards-state.yml  cards.yml  combat-world-state.yml  combat-world.yml  npcs.yml  resources  state.yaml  tag-engine.yml  tags-state.yml  todo.md
.gitea/workflows/: pipeline.yaml
assets/: avatars  backgrounds  cards  skills
assets/data/: actors.json  cards.json
assets/scripts/: definitions.lua  spawn_battle.lua
bichannel/: Cargo.toml
bichannel/src/: lib.rs
docs/: ART.md  AUDIO.md  BALANCE.md  CARDS.md  DIALOGUE.md  ENEMIES.md  EXPANSIONS.md  GAME-DESIGN.md  LORE.md  TECH-DESIGN.md  TOOLING.md  UX.md
domain/: Cargo.toml
domain/src/: card.rs  character.rs  choice.rs  description.rs  effect.rs  field.rs  lib.rs  location.rs  message.rs  player.rs  predicate.rs  stats.rs  target.rs
engine/: Cargo.toml
engine/src/: action.rs  bichannel.rs  choice.rs  command.rs  description.rs  effect.rs  image.rs  lib.rs  location.rs  predicate.rs  scene.rs  state.rs  state_machine.rs
engine/src/combat/: card.rs  entity.rs  mod.rs  npc.rs  target.rs
engine/src/core/: action.rs  choice.rs  command.rs  commands.rs  description.rs  effect.rs  image.rs  location.rs  mod.rs  predicate.rs  scene.rs  state.rs  state_machine.rs  tag.rs  tags.rs  transition.rs
engine/src/domain/: card.rs  character.rs  encounter.rs  entity.rs  field.rs  mod.rs  stats.rs  target.rs
engine/src/game/: entity.rs  target.rs
engine/src/state/: campaign_state_machine.rs  campaign_world.rs  combat_state_machine.rs  combat_world.rs  mod.rs  tag_engine.rs
interface/: Cargo.toml
interface/src/: ascii_art.rs  image.rs  lib.rs  log_utils.rs  tui.rs  utils.rs
interface/src/component/: campaign.rs  combat.rs  inventory.rs  logging.rs  messages.rs  mod.rs  scene_and_choices.rs
interface/src/component/inventory/: campaign.rs  combat.rs  mod.rs
interface/src/component/scene/: campaign_scene.rs  combat_scene.rs  mod.rs
interface/src/handler/: campaign_handler.rs  logging_handler.rs  mod.rs
interface/src/widget/: choice.rs  image.rs  instructions.rs  location.rs  messages.rs  mod.rs  scene.rs  stats.rs  tags.rs
interface/src/widget/choice/: campaign_choice.rs  combat_choice.rs  mod.rs
prefab/: Cargo.toml
prefab/src/: campaign_state_machine.rs  campaign_world.rs  cards.rs  characters.rs  lib.rs  messages.rs  npcs.rs  states.rs  tag_engine.rs  tags.rs
prefab/src/combat_world/: combat_defeat.rs  combat_end.rs  combat_init.rs  combat_start.rs  combat_victory.rs  mod.rs  player_apply_stats.rs  player_damage.rs  player_draw.rs  player_play.rs  turn_end.rs  turn_start.rs
rusqlite_derive/: Cargo.toml
rusqlite_derive/src/: lib.rs
rusqlite_derive/tests/: lib.rs
rusqlite_orm/: Cargo.toml  test.db
rusqlite_orm/src/: binding.rs  column.rs  crud.rs  dao.rs  lib.rs  product.rs  sql_type.rs
rusqlite_orm/tests/: lib.rs  orm_autobind.rs
src/: event.rs  game_coordinator.rs  lib.rs  main.rs  state.rs  zindex.rs
src/asset/: actor.rs  card.rs  class.rs  lore.rs  mod.rs  stats.rs
src/battle/: card.rs  character.rs  class.rs  controller.rs  description.rs  mod.rs  place.rs  stats.rs  target.rs
src/campaign/: location.rs  mod.rs
src/cards/: event.rs  mod.rs  script.rs  system.rs  utils.rs
src/engine/: campaign.rs  campaign_coordinator.rs  combat.rs  combat_coordinator.rs  daemon.rs  dynamic_state_machine.rs  game.rs  game_coordinator.rs  mod.rs  state_machine.rs  static_state_machine.rs  tag_engine.rs
src/engine/combat/: card.rs  mod.rs  npc.rs  stats.rs
src/engine/coordinator/: campaign_coordinator.rs  combat_coordinator.rs  game_coordinator.rs  mod.rs
src/engine/core/: choice.rs  commands.rs  location.rs  predicate.rs  tag.rs
src/engine/state/: campaign_state_machine.rs  campaign_world.rs  combat_state_machine.rs  combat_world.rs  tag_engine.rs
src/engine/state_machine/: campaign_state_machine.rs  combat_state_machine.rs  dynamic_state_machine.rs  mod.rs  static_state_machine.rs
src/interface/: app.rs  commands.rs  handler.rs  logging.rs  mod.rs  options.rs  scene.rs  tui.rs  utils.rs
src/interface/handler/: campaign_handler.rs  logging_handler.rs  mod.rs
src/interface/widget/: choice.rs  mod.rs  scene.rs  tags.rs
src/interface/widgets/: campaign.rs  choice.rs  logging.rs  mod.rs  scene.rs  tags.rs
src/menu/: main_menu.rs  mod.rs  resource.rs  settings.rs
src/prefab/: campaign_world.rs  cards.rs  combat_world.rs  mod.rs  npcs.rs  tag_engine.rs  tags.rs
src/prefab/combat_world/: combat_init.rs  mod.rs  player_damage.rs  player_draw.rs  player_play.rs
src/resource/: action.rs  choice.rs  commands.rs  description.rs  dynamic_world.rs  location.rs  mod.rs  predicate.rs  scene.rs  state.rs  static_world.rs  tag.rs  transition.rs  world.rs
src/resource/combat/: card.rs  cards.rs  class.rs  field.rs  mod.rs  npc.rs  stats.rs
src/resource/core/: action.rs  choice.rs  mod.rs  tag.rs
src/resource/prefab/: campaign_world.rs  combat_world.rs  mod.rs
src/resource/world/: campaign_world.rs  combat_world.rs  dynamic_world.rs  mod.rs
src/statemachine/: daemon.rs  location.rs  machine.rs  mod.rs  state.rs  transition.rs
src/tagengine/: action.rs  engine.rs
src/ui/: battle.rs  campaign.rs  interactive_sprites.rs  mod.rs  resource.rs  script.rs  state.rs
src/ui/interactive_sprites/: mod.rs  system.rs  utils.rs
src/ui/menu/: settings.rs
