[profile.dev]
# codegen-backend = "cranelift"
panic = 'abort'


[package]
name = "pipedream"
version = "0.3.0"
edition = "2024"


[workspace]
members = [
  "bichannel",
  "domain",
  "engine",
  "interface",
  "prefab",
  "rusqlite_orm",
]


[workspace.dependencies]
# Batteries-included
chrono = { version = "0.4.39", features = ["serde", "clock"] }
crossbeam-channel = { version = "0.5.13" }
image = { version = "0.25.2", default-features = false, features = ["png"] }
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }
# Logging
log = { version = "0.4.21", features = ["kv"] }
# log4rs = "1.3.0"
tui-logger = "0.11.1"
# Proc-macros
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
# Serde
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.122" }
# SQLite
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled", "trace"] }
serde_rusqlite = "0.35.0"
# TUI
crossterm = "0.27.0"
ratatui = { version = "0.26.3" }
tui-markup = { version = "0.4.0", features = ["ratatui"] }


[dependencies]
bichannel = { path = "bichannel" }
rusqlite_orm = { path = "rusqlite_orm" }
pipedream_engine = { path = "engine" }
pipedream_domain = { path = "domain" }
pipedream_interface = { path = "interface" }
pipedream_prefab = { path = "prefab" }

log.workspace = true
rusqlite.workspace = true
