[package]
name = "pipedream"
version = "0.4.0"
edition = "2024"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
  "-C",
  "link-arg=-fuse-ld=/usr/bin/mold",
  "-Zshare-generics=y",
]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"


[dependencies]
# Batteries-included
chrono = { version = "0.4.39", features = ["serde", "clock"] }
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }

# Logging
log = { version = "0.4.21", features = ["kv", "max_level_debug", "release_max_level_warn"] }
log4rs = "1.3.0"

# Bevy
bevy = { version = "0.16.0", features = ["default", "dynamic_linking"] }
bevy_pixcam = "0.16.0"
bevy_scriptum = { version = "0.8.1", features = ["lua"] }
