[package]
name = "pipedream"
version = "0.4.0"
edition = "2024"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[dependencies]
# Batteries-included
chrono = { version = "0.4.42", features = ["serde", "clock"] }
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }

# Logging
log = { version = "0.4.28", features = ["kv", "max_level_debug", "release_max_level_warn"] }
log4rs = "1.4.0"

# Bevy
bevy = { version = "0.16.1", features = ["default", "dynamic_linking"] }
bevy_pixcam = "0.16.0"
bevy_scriptum = { version = "0.9.1", features = ["lua"] }
