cargo-features = ["edition2024", "codegen-backend"]


[package]
name = "pipedream_domain"
version = "0.3.0"
edition = "2024"


[dependencies]
rusqlite_orm = { path = "../rusqlite_orm" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
serde_rusqlite.workspace = true

rand.workspace = true

log.workspace = true

strum.workspace = true
