cargo-features = ["edition2024", "codegen-backend"]


[package]
name = "pipedream-engine"
version = "0.3.0"
edition = "2024"


[dependencies]
rusqlite_orm = { path = "../rusqlite_orm" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.122"
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled", "trace"] }
serde_rusqlite = "0.35.0"

rand = "0.8.5"

log = { version = "0.4.21", features = ["kv"] }

strum = "0.26.2"
strum_macros = "0.26.4"
