cargo-features = ["edition2024", "codegen-backend"]


[package]
name = "pipedream_interface"
version = "0.3.0"
edition = "2024"


[dependencies]
bichannel = { path = "../bichannel" }
pipedream_engine = { path = "../engine" }
pipedream_domain = { path = "../domain" }

log4rs.workspace = true
tui-logger.workspace = true

crossterm.workspace = true
ratatui.workspace = true
tui-markup.workspace = true

log.workspace = true

image.workspace = true

strum.workspace = true
strum_macros.workspace = true
