[package]
name = "pipedream_prefab"
version = "0.3.0"
edition = "2024"


[dependencies]
pipedream_engine = { path = "../engine" }
pipedream_domain = { path = "../domain" }

rand.workspace = true

log.workspace = true

rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

strum.workspace = true
