cargo-features = ["edition2024", "codegen-backend"]


[package]
name = "rusqlite_orm"
version = "0.3.0"
edition = "2024"


[lib]
proc-macro = true


[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true

serde.workspace = true
serde_json.workspace = true

rusqlite.workspace = true
serde_rusqlite.workspace = true
